force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__DomainControllerName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DomainControllerName__c</fullName>
    <label>Domain Controller Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>