force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__DriverInterfaceType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DriverInterfaceType__c</fullName>
    <label>Driver Interface Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>