force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Email__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>