force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Enabler_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Enabler_Type__c</fullName>
    <label>Enabler Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PR/SM</fullName>
            </value>
            <value>
                <fullName>z/VM</fullName>
            </value>
            <value>
                <fullName>VMware Server</fullName>
            </value>
            <value>
                <fullName>Solaris Resource Manager</fullName>
            </value>
            <value>
                <fullName>LPAR</fullName>
            </value>
            <value>
                <fullName>Integrity VM</fullName>
            </value>
            <value>
                <fullName>Microsoft Hyper-V</fullName>
            </value>
            <value>
                <fullName>VMware ESX Server</fullName>
            </value>
            <value>
                <fullName>VMware Workstation</fullName>
            </value>
            <value>
                <fullName>Xen Hypervisor</fullName>
            </value>
            <value>
                <fullName>LDOM Hypervisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>KVM</fullName>
            </value>
            <value>
                <fullName>SolarisContainer</fullName>
            </value>
            <value>
                <fullName>VPar</fullName>
            </value>
            <value>
                <fullName>HPnPartitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>