force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__EnvironmentSpecification__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EnvironmentSpecification__c</fullName>
    <label>Environment Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>