force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Expansion__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Expansion__c</fullName>
    <label>Expansion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>