force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Export__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to tag a record for exporting from RF Config Migration package.</description>
    <inlineHelpText>Select this field to allow the record to be exported from the RF Config Migration Pentaho package.</inlineHelpText>
    <label>Tag for Export</label>
    <type>Checkbox</type>
</CustomField>