force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__FailedAutomaticIdentification__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FailedAutomaticIdentification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FailedAutomaticIdentification</label>
    <type>Checkbox</type>
</CustomField>