force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Fax__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Fax__c</fullName>
    <label>Fax</label>
    <length>64</length>
    <type>Text</type>
</CustomField>