force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__FileName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>