force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__FKAssetRuleClass__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAssetRuleClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Asset Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>Base Elements (Rule Asset Class)</relationshipLabel>
    <relationshipName>Base_Elements3</relationshipName>
    <type>Lookup</type>
</CustomField>