force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__FKModel__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores model of the instance</description>
    <inlineHelpText>Select the model of the instance.</inlineHelpText>
    <label>Model Name</label>
    <referenceTo>BMCServiceDesk__Model__c</referenceTo>
    <relationshipLabel>Base Elements (Model)</relationshipLabel>
    <relationshipName>Base_Elements3</relationshipName>
    <type>Lookup</type>
</CustomField>