force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__FlashMemory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FlashMemory__c</fullName>
    <label>Flash Memory</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>