force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Frequency__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Frequency__c</fullName>
    <label>Frequency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>