force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__GridLocation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__GridLocation__c</fullName>
    <label>Grid Location</label>
    <length>64</length>
    <type>Text</type>
</CustomField>