force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__History__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__History__c</fullName>
    <label>History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>