force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__HostName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HostName__c</fullName>
    <label>Host Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>