force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__IMEI__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IMEI__c</fullName>
    <description>Stores the International Mobile Equipment Identity (IMEI) number, which is the unique identifier of a mobile device and is typically displayed on the phone’s back cover or under the battery.</description>
    <inlineHelpText>Specify a valid 15-digit IMEI number.</inlineHelpText>
    <label>IMEI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>