force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ImpactComputationModel__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImpactComputationModel__c</fullName>
    <label>ImpactComputationModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>