force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Infrastructure_Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Infrastructure_Instance_Type__c</fullName>
    <label>Infrastructure Instance Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>