force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__InputVoltage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InputVoltage__c</fullName>
    <label>Input Voltage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>