force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__InstalledDASD__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InstalledDASD__c</fullName>
    <label>Installed DASD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>