force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__InstanceID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InstanceID__c</fullName>
    <inlineHelpText>This field is automatically set to the GUID that is generated as an Instance ID for the instance.</inlineHelpText>
    <label>Instance ID</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>