force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__InstanceType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InstanceType__c</fullName>
    <formula>IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
					$Label.bmcservicedesk__instancetypefldlblciandasset,
					IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 1),
						$Label.bmcservicedesk__cmdb_tab_cis,
						IF(NOT(ISBLANK(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 2),
							$Label.bmcservicedesk__cmdbasset,
							IF(((ISBLANK(BMCServiceDesk__FKAssetRuleClass__c) || ISNULL(BMCServiceDesk__FKAssetRuleClass__c)) &amp;&amp; NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI&apos;) || ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;&apos;)) &amp;&amp; BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
								$Label.bmcservicedesk__cmdb_tab_cis,
								IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1),
									$Label.bmcservicedesk__cmdbasset, 
									IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 1 &amp;&amp; BMCServiceDesk__DeleteStatusCode__c &lt;&gt; 2),
										$Label.bmcservicedesk__instancetypefldlblciandasset,
										IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 1),
											$Label.bmcservicedesk__cmdb_tab_cis,
											IF(NOT(ISBLANK(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; NOT(ISNULL(BMCServiceDesk__CMDB_Class__c)) &amp;&amp; (ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)) &amp;&amp; (BMCServiceDesk__DeleteStatusCode__c = 2),
												$Label.bmcservicedesk__cmdbasset, $Label.bmcservicedesk__psatnotapplicable
											)
										)
									)
								)
							)
						)
					)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance Type</label>
    <type>Text</type>
</CustomField>