force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Integrity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Integrity__c</fullName>
    <label>Integrity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>