force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Interconnect__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Interconnect__c</fullName>
    <label>Interconnect</label>
    <length>30</length>
    <type>Text</type>
</CustomField>