force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__InterconnectAddress__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InterconnectAddress__c</fullName>
    <label>Interconnect Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>