force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InterfaceType__c</fullName>
    <label>Interface Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>