force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Is_Switching_Supply__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Is_Switching_Supply__c</fullName>
    <label>Is Switching Supply</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>