force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Item__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Item__c</fullName>
    <label>Item</label>
    <length>60</length>
    <type>Text</type>
</CustomField>