force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__LastModifiedByName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LastModifiedByName__c</fullName>
    <formula>LastModifiedBy.FirstName + &apos;  &apos; + LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the user who last modified the instance.</inlineHelpText>
    <label>Last Modified By</label>
    <type>Text</type>
</CustomField>