force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__LastName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>