force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__LastScanDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LastScanDate__c</fullName>
    <label>LastScanDate</label>
    <type>DateTime</type>
</CustomField>