force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Level__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Level__c</fullName>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>