force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Link_Technology__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Link_Technology__c</fullName>
    <label>Link Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>FC</fullName>
            </value>
            <value>
                <fullName>FDDI</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Token Ring</fullName>
            </value>
            <value>
                <fullName>Frame Relay</fullName>
            </value>
            <value>
                <fullName>Infrared</fullName>
            </value>
            <value>
                <fullName>BlueTooth</fullName>
            </value>
            <value>
                <fullName>Wireless LAN</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>