force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Locale__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Locale__c</fullName>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>