force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Low_Water_Mark__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Low_Water_Mark__c</fullName>
    <label>Low Water Mark</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>