force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__LUN_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LUN_ID__c</fullName>
    <label>LUN ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>