force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MACAddress__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MACAddress__c</fullName>
    <label>MAC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>