force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Manufacturer__c</fullName>
    <description>Stores the manufacturer that is defined in the selected model record. If a manufacturer is not defined in the selected model, this field displays the value from the Manufacturer Name field (data type: Text) in the Base Element object.</description>
    <formula>IF(OR( ISNULL(BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c),ISBLANK(BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c)),  BMCServiceDesk__ManufacturerName__c , BMCServiceDesk__FKModel__r.BMCServiceDesk__Manufacturer__c)</formula>
    <inlineHelpText>Automatically displays the manufacturer defined in the selected model. If a manufacturer is not defined, it displays the Manufacturer Name field value.</inlineHelpText>
    <label>Model Manufacturer</label>
    <type>Text</type>
</CustomField>