force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__ManufacturerName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ManufacturerName__c</fullName>
    <label>Manufacturer Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>