force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MarkAsDeleted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you want to mark this instance as soft deleted. You can exclude it from searches and other activities by using the MarkAsDeleted attribute in your conditions. Additionally, you can preserve its relationships for future reuse.</inlineHelpText>
    <label>Mark As Deleted</label>
    <type>Checkbox</type>
</CustomField>