force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Max_Component_Length__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Max_Component_Length__c</fullName>
    <label>Maximum Component Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>