force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Max_Speed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Max_Speed__c</fullName>
    <label>Maximum Speed</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>