force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__Maximum_Allowed__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Maximum_Allowed__c</fullName>
    <label>Maximum Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>