force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MaxNumberOfProcesses__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MaxNumberOfProcesses__c</fullName>
    <label>Maximum Number Of Processes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>