force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement__c/fields/BMCServiceDesk__MaxProcessMemorySize__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MaxProcessMemorySize__c</fullName>
    <label>Maximum Process Memory Size</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>